# MNN

./: CMakeLists.txt
benchmark/: CMakeLists.txt
codegen/: CMakeLists.txt
express/: CMakeLists.txt
pymnn/: CMakeLists.txt
source/backend/arm82/: CMakeLists.txt
source/backend/cpu/: CMakeLists.txt
source/backend/cpu/arm/: CMakeLists.txt
source/backend/cpu/bf16/: CMakeLists.txt
source/backend/cpu/x86_x64/: CMakeLists.txt
source/backend/cuda/: CMakeLists.txt
source/backend/hiai/: CMakeLists.txt
source/backend/metal/: CMakeLists.txt
source/backend/opencl/: CMakeLists.txt
source/backend/opengl/: CMakeLists.txt  GLBinary.cpp  GLConcat.cpp  GLConverter.cpp  GLConvolution.cpp  GLConvolutionDepthwise.cpp  GLConvolutionIm2col.cpp  GLEltwise.cpp  GLHead.hpp  GLInterp.cpp  GLLock.cpp  GLPermute.cpp  GLPool.cpp  GLROIPooling.cpp  GLRelu.cpp  GLReshape.cpp  GLSoftmax.cpp  GLSqueeze.cpp  GLUnary.cpp
source/backend/tensorrt/: CMakeLists.txt
source/backend/vulkan/: CMakeLists.txt
source/plugin/: CMakeLists.txt
test/: CMakeLists.txt
test/plugin/: CMakeLists.txt
tools/converter/: CMakeLists.txt
tools/converter/source/onnx/: CMakeLists.txt
tools/cpp/: CMakeLists.txt
tools/evaluation/: CMakeLists.txt
tools/train/: CMakeLists.txt
